--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
 INCLUDE_DIRECTORIES (
         ${Boost_INCLUDE_DIR}
-        headers
-        headers/common
-        headers/structure
-        headers/utils)
+        vendors
+        headers)
 
 SET( SPH_SOURCE_FILES
         main.cpp
