Such BLAS ! Wow LAPACK ! Mery Armadillo !

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,70 +2,64 @@ cmake_minimum_required(VERSION 3.4)
 project(PJE)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
-
-# INCLUDE ( ${CMAKE_MODULE_PATH}/OpenVdb.cmake )
-
-# FIND_PACKAGE ( Boost ${MINIMUM_BOOST_VERSION} REQUIRED )
-
-# FIND_PACKAGE(VTK)
-# INCLUDE(${VTK_USE_FILE})
-
+FIND_PACKAGE(Armadillo REQUIRED)
+FIND_PACKAGE(OpenMP REQUIRED)
+FIND_PACKAGE(VTK REQUIRED)
 FIND_PACKAGE(HDF5 REQUIRED)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -std=c++14")
+
 INCLUDE_DIRECTORIES(
-        ${Boost_INCLUDE_DIR}
+        ${ARMADILLO_INCLUDE_DIRS}
         headers
         vendors)
 
 ADD_LIBRARY(PJEAcceleration
-        src/utils/Prime.cc
-        headers/utils/Prime.hh
-        src/structure/AccelerationMap.cc
-        headers/structure/AccelerationMap.hh)
+        src/utils/Prime.cpp
+        headers/utils/Prime.hpp
+        src/structure/AccelerationMap.cpp
+        headers/structure/AccelerationMap.hpp)
 
 ADD_LIBRARY(PJECommon
-        headers/utils/macros.hh
-        headers/utils/Vec3.hh
-        headers/utils/Matrix.hh
-        src/common/Fluid.cc
-        headers/common/Fluid.hh
-        src/common/Particle.cc
-        headers/common/Particle.hh
-        src/common/Force.cc
-        headers/common/Force.hh)
+        headers/utils/macros.hpp
+        headers/utils/Vec3.hpp
+        src/common/Fluid.cpp
+        headers/common/Fluid.hpp
+        src/common/Particle.cpp
+        headers/common/Particle.hpp
+        src/common/Force.cpp
+        headers/common/Force.hpp)
 
 ADD_LIBRARY(PJESolid
-        src/solid/Solid.cc
-        headers/solid/Solid.hh headers/solid/Cube.cc headers/solid/Cube.hh)
+        src/solid/Solid.cpp
+        headers/solid/Solid.hpp src/solid/Cube.cpp headers/solid/Cube.hpp)
 
 ADD_LIBRARY(PJEKernel
-        src/kernel/Kernel.cc
-        headers/kernel/Kernel.hh
-        src/kernel/KernelPoly6.cc
-        headers/kernel/KernelPoly6.hh
-        src/kernel/KernelSine.cc
-        headers/kernel/KernelSine.hh
-        src/kernel/KernelSpiky.cc
-        headers/kernel/KernelSpiky.hh
-        src/kernel/KernelViscosity.cc
-        headers/kernel/KernelViscosity.hh)
+        src/kernel/Kernel.cpp
+        headers/kernel/Kernel.hpp
+        src/kernel/KernelPoly6.cpp
+        headers/kernel/KernelPoly6.hpp
+        src/kernel/KernelSine.cpp
+        headers/kernel/KernelSine.hpp
+        src/kernel/KernelSpiky.cpp
+        headers/kernel/KernelSpiky.hpp
+        src/kernel/KernelViscosity.cpp
+        headers/kernel/KernelViscosity.hpp)
 
 
 ADD_LIBRARY(PJEException
-        src/exception/NotImplementedException.cc
-        headers/exception/NotImplementedException.hh)
+        src/exception/NotImplementedException.cpp
+        headers/exception/NotImplementedException.hpp)
 
 ADD_EXECUTABLE(sph main.cpp)
-TARGET_LINK_LIBRARIES(sph PJECommon PJEAcceleration PJESolid PJEKernel PJEException )
+TARGET_LINK_LIBRARIES(sph ${ARMADILLO_LIBRARIES} PJECommon PJEAcceleration PJESolid PJEKernel PJEException )
 
 ADD_EXECUTABLE(tests
-        test/main.cc
-        test/unit/accelTest.cc
-        test/unit/exceptionTest.cc
-        test/unit/forceTest.cc
-        test/unit/fluidTest.cc
-        test/unit/kernelTest.cc
-        test/unit/particleTest.cc
-        test/unit/vec3Test.cc test/unit/solidTest.cc test/unit/solidTest.hh)
-TARGET_LINK_LIBRARIES(tests PJECommon PJEAcceleration PJESolid PJEKernel PJEException )
+        test/main.cpp
+        test/unit/accelTest.cpp
+        test/unit/exceptionTest.cpp
+        test/unit/forceTest.cpp
+        test/unit/fluidTest.cpp
+        test/unit/kernelTest.cpp
+        test/unit/particleTest.cpp)
+TARGET_LINK_LIBRARIES(tests ${ARMADILLO_LIBRARIES} PJECommon PJEAcceleration PJESolid PJEKernel PJEException )
