--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
 .idea
+CMakeFiles
+
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
+
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+.nb-gradle/
+
+compile_commands.json
 
 # Compiled Object files
 *.slo
